bugfix - button exits visible area on hover

--- a/css/app.css
+++ b/css/app.css
@@ -1,6 +1,7 @@
 @import url('base.css');
 @import url('card.css');
 @import url('scrollbar.css');
+@import url('play.css');
 
 /* Body */
 body {
@@ -9,6 +10,7 @@ body {
 	padding: var(--offset, 2rem);
 	background: var(--color-background);
 	color: var(--color-text);
+	overflow: hidden;
 	/* font-size: 1.25rem; */
 	/* font-weight: 400; */
 }
@@ -40,40 +42,15 @@ body:is(.portrait) #body-content {
 /* Menu */
 #menu {
 	display: grid;
-	grid-template-rows: 4rem auto 1fr;
+	grid-template-rows: 4rem 1fr;
 	gap: 0.5rem;
-	overflow-y: auto;
+	overflow: hidden;
+	padding-top: 0.5rem;
+	margin-top: -0.5rem;
 }
 nav {
 	display: grid;
 	grid-template-rows: max-content 1fr max-content;
-}
-#player-list {
-	border: 1px solid var(--accent);
-	overflow-y: auto;
-}
-.player-card {
-	display: grid;
-	position: relative;
-}
-.player-card::after {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: var(--accent);
-	border-radius: var(--border-radius);
-	/* margin: -0.5rem; */
-	content: '';
-	opacity: 0.1;
-}
-
-.player-card:nth-child(even)::after {
-	opacity: 0.1;
-}
-.player-card:nth-child(odd)::after {
-	opacity: 0.2;
 }
 /* Main */
 #main-content {
@@ -97,80 +74,4 @@ body:is(.portrait) main {
 main::after {
 	--card-background: var(--primary);
 	opacity: 0.2;
-}
-
-/* Canvas */
-
-#canvas-container {
-	position: relative;
-	padding: 0;
-}
-canvas {
-	background: white;
-	position: absolute;
-	bottom: -1px;
-	right: -1px;
-	transform-origin: bottom right;
-	transform: scale(var(--canvas-scale-factor, 1));
-}
-
-#tools-container {
-	color: var(--primary);
-}
-#tools-container {
-	background: var(--secondary);
-}
-
-/* Chat */
-
-#sozials {
-	display: grid;
-	grid-template-rows: 3rem 1fr 3rem;
-	gap: 0.5rem;
-	overflow: hidden;
-}
-#sozials > * {
-	background: var(--color-background);
-}
-#room-controls-container {
-	display: flex;
-}
-#room-controls-container > * {
-	width: 100%;
-	margin: 2px;
-}
-
-#chat {
-	overflow-y: auto;
-	word-wrap: break-word;
-}
-.chatmessage {
-	position: relative;
-}
-.chatmessage::after {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: var(--accent);
-	border-radius: var(--border-radius);
-	margin: -0.25rem;
-	content: '';
-	pointer-events: none;
-}
-.chatmessage:nth-child(even)::after {
-	opacity: 0.1;
-}
-.chatmessage:nth-child(odd)::after {
-	opacity: 0.2;
-}
-.user-name::after {
-	content: ':';
-}
-
-#chat-controls-container {
-	display: grid;
-	grid-template-columns: 1fr 2rem;
-	gap: 0.25rem;
 }
